tests/errors/promiseBlockingNotSend.milo
// @error: cannot send 'p' of type '*u8' across threads

from "std/runtime" import {
    Promise
}

fn main(): i32 {
    var x: i32 = 42
    unsafe {
        let p = (x.addrOf()) as *u8
        let job = Promise<i64>.blocking(move(): i64 => {
            return p as i64
        }
        )
        let v = job.await()!
        print(v)
    }
    return 0
}
